about to add KM comments recieved during our skype meeting

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -73,7 +73,8 @@
 \shorttitle{Evolution of the radius valley with stellar mass}
 
 \begin{document}
-\title{Evolution of the occurrence rate of small close-in planets around low mass stars from \emph{KEPLER} and \emph{K2}}
+\title{Evolution of the radius valley around low mass stars from \emph{KEPLER} and \emph{K2}}
+\title{The radius valley around low mass stars from Kepler and K2: } 
 \author{Ryan Cloutier\altaffilmark{1,2}}
 \author{Kristen Menou\altaffilmark{3,2} et al.}
 
@@ -93,16 +94,16 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   Resolving the so-called radius valley around low mass stars can provide valuable
   constraints on the physical mechanisms that sculpt the valley and so far have been largely limited
   by relatively poor counting statistics.
-  Here we calculate the occurrence rate of small close-in planets around mid-K to mid-M dwarfs
+  Here we calculate the occurrence rate of small close-in planets around low mass dwarf stars
   using the known planet populations from the \kepler{} and \ktwo{} missions while
   exploiting the \gaia{} DR2 data to refine the stellar parameters. 
   The application of appropriate completeness corrections %to the empirical planet population
   clearly reveals the radius valley in the maximum a-posteriori occurrence rates as a
-  function of orbital period and planet radius. \textbf{The slope of the valley with orbital separation
+  function of orbital separation and planet radius. \textbf{The slope of the valley %with orbital separation
   is shown to differ in sign from that measured around Sun-like stars which suggests that
   thermally driven mass loss may not dominate the
   formation and evolution of planets in the low stellar mass regime.}
-  The prominence and location of radius valley features are also shown to evolve with stellar mass as
+  The prominence and location of the radius valley features are also shown to evolve with stellar mass as
   the relative occurrence of terrestrial to gaseous planets increases by an order of magnitude from mid-K to
   mid-M dwarfs and each valley feature is shifted to smaller
   planet sizes with decreasing stellar mass in agreement with physical models of photoevaporation,
@@ -149,7 +150,7 @@ spectroscopy, asteroseismology, and \gaia{} parallaxes
 \citep[e.g.][]{fulton17,berger18,fulton18,vaneylen18,martinez19}. Each of these independent studies clearly
 resolved the radius valley among small close-in planets orbiting Sun-like stars.
 A variety of trends were also observed in either
-the raw or in the completeness-corrected (i.e. the occurrence rate) distributions of close-in planets. Firstly,
+the raw or in the completeness-corrected (i.e. the occurrence rate) distributions. Firstly,
 the location of the radius valley around FGK stars is period-dependent with slope
 $\mathrm{d}\log{r_p} / \mathrm{d}\log{P} \sim -0.1$ \citep{vaneylen18,martinez19}, a result that is consistent
 with both photoevaporation and core-powered mass loss models but is inconsistent with the late formation of
@@ -168,8 +169,8 @@ the data from \citealt{berger18}). This study leverages the precise stellar para
 for low mass stars observed by \kepler{} and \ktwo{} to refine the stellar parameters and compute precise
 occurrence rates of close-in planets with the goal of resolving the radius valley and accurately measuring the
 location of the radius valley features and their uncertainties. Although it is unlikely that a single physical
-mechanism is responsible for sculpting the radius valley, investigation the evolution of the valley features with
-stellar mass can allude to which process---if any---dominates the evolution of close-in planets.
+mechanism is solely responsible for sculpting the radius valley, investigation the evolution of the valley features
+with stellar mass can allude to which process---if any---dominates the evolution of close-in planets.
 
 
 \begin{figure}
@@ -191,7 +192,7 @@ In Sects.~\ref{sect:stars} and ~\ref{sect:planets} we define our stellar sample 
 and compile our sample of confirmed planets from each mission.
 In Sect.~\ref{sect:completeness} we derive the transiting planet detection completeness and use those results
 to calculate the occurrence rate of small close-in planets in which the structure of the radius valley around
-low mass stars is resolved (Sect.~\ref{sect:occurrence}). Our results as a function stellar mass are compared to
+low mass stars is resolved (Sect.~\ref{sect:occurrence}). Our results as a function of stellar mass are compared to
 model predictions in Sect.~\ref{sect:models}. Sect.~\ref{sect:discussion} presents a discussion of our results
 and its implications with a summary of our main findings being presented in Sect.~\ref{sect:conclusions}.
 
@@ -201,7 +202,7 @@ The goal of this study is to extend measurements of the occurrence rate of close
 by low mass dwarf stars with effective temperatures \teff{} $<4700$ K: the lower limit of \teff{}
 considered in the California Kepler Survey \citep[CKS;][]{fulton17}.
 This adopted temperature threshold approximately corresponds to spectral types later than
-K3.5V \citep{pecaut13}. In the following subsections we define our stellar sample from both \kepler{} or \ktwo{.}
+K3.5V \citep{pecaut13}. In the following subsections we define our stellar samples from each of \kepler{} or \ktwo{.}
 
 \subsection{Kepler Stellar Sample} \label{sect:kep}
 Following the release of \gaia{} DR2 \citep{lindegren18}, \cite{berger18} cross-matched \kepler{} target stars
@@ -217,12 +218,12 @@ with \teff{} measurements to refine the stellar radii using the Stefan-Boltzmann
 However, bolometric corrections for \kepler{} M dwarfs with \teff{} $<4100$ K
 and absolute $K_s$-band magnitudes $M_{K_s}>3$ are known to suffer significant inaccuracies owing to incomplete
 molecular line lists. For these stars, \cite{berger18} instead adopted the empirically-derived M dwarf radius-luminosity
-relation from \cite{mann15} to refine the M dwarf stellar radii. \cite{berger18} also combined the \teff{} 
+relation from \cite{mann15} to refine the M dwarf stellar radii. \cite{berger18} also combined \teff{} and the 
 luminosity measurements to derive stellar evolutionary flags aimed at classifying stars as either a dwarf, a subgiant, or a
 red giant.
 
-Stellar masses $M_s$ are not reported by \cite{berger18}. In order to study the \kepler{} planet population as a function of $M_s$,
-we derive $M_s$ values given the measured stellar radii $R_s$ using the mass-radius relation from \cite{boyajian12} which is
+Stellar masses $M_s$ are not reported by \cite{berger18}. In order to study the \kepler{} planet population as a function of $M_s$
+we derive $M_s$ values given the measured stellar radii $R_s$ and using the mass-radius relation from \cite{boyajian12} 
 applicable to both K and M dwarfs.
 \cite{boyajian12} acquired interferometric measurements with the \emph{CHARA} array of 21 nearby K and M dwarfs
 to measure the angular size of each stellar disk at the level of $\lesssim 5$\%. Their stellar sample was supplemented by 12
@@ -1229,7 +1230,7 @@ scaling these values by the typical bolometric luminosities of stars in the vari
 Sun-like stars having higher absolute X-ray luminosities which contributes to more efficient clearing of the 
 gap by photoevaporation.
 
-\section{Summary of primary findings} \label{sect:conclusions}
+\section{Summary of main findings} \label{sect:conclusions}
 This study presented calculations of the occurrence rate of small close-in planets orbiting low mass stars
 using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are summarized below.
 
