--- a/refs.bib
+++ b/refs.bib
@@ -28170,3 +28170,86 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.490...15O},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{wyatt19,
+       author = {{Wyatt}, M.~C. and {Kral}, Q. and {Sinclair}, C.~A.},
+        title = "{Susceptibility of planetary atmospheres to mass loss and growth by planetesimal impacts: the impact shoreline}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = "2019",
+        month = "Oct",
+          eid = {arXiv:1910.10731},
+        pages = {arXiv:1910.10731},
+archivePrefix = {arXiv},
+       eprint = {1910.10731},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv191010731W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{shuvalov09,
+       author = {{Shuvalov}, V.},
+        title = "{Atmospheric erosion induced by oblique impacts}",
+      journal = {Meteoritics and Planetary Science},
+     keywords = {Impact modeling, Martian atmosphere, Earth, Asteroid impact(s)},
+         year = "2009",
+        month = "Aug",
+       volume = {44},
+       number = {8},
+        pages = {1095-1105},
+          doi = {10.1111/j.1945-5100.2009.tb01209.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009M&PS...44.1095S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{schlichting15,
+   author = {{Schlichting}, H.~E. and {Sari}, R. and {Yalinewich}, A.},
+    title = "{Atmospheric mass loss during planet formation: The importance of planetesimal impacts}",
+  journal = {\icarus},
+archivePrefix = "arXiv",
+   eprint = {1406.6435},
+ primaryClass = "astro-ph.EP",
+ keywords = {Atmospheres, evolution, Collisional physics, Planetary formation, Planetesimals, Terrestrial planets},
+     year = 2015,
+    month = feb,
+   volume = 247,
+    pages = {81-94},
+      doi = {10.1016/j.icarus.2014.09.053},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2015Icar..247...81S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mcdonald19,
+       author = {{McDonald}, George D. and {Kreidberg}, Laura and {Lopez}, Eric},
+        title = "{The Sub-Neptune Desert and Its Dependence on Stellar Type: Controlled by Lifetime X-Ray Irradiation}",
+      journal = {\apj},
+     keywords = {planets and satellites: atmospheres, planets and satellites: gaseous planets, planets and satellites: physical evolution, X-rays: stars},
+         year = "2019",
+        month = "May",
+       volume = {876},
+       number = {1},
+          eid = {22},
+        pages = {22},
+          doi = {10.3847/1538-4357/ab1095},
+       adsurl = {https://ui-adsabs-harvard-edu.ezp-prod1.hul.harvard.edu/abs/2019ApJ...876...22M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{shkolnik14,
+       author = {{Shkolnik}, Evgenya L. and {Barman}, Travis S.},
+        title = "{HAZMAT. I. The Evolution of Far-UV and Near-UV Emission from Early M Stars}",
+      journal = {\aj},
+     keywords = {astrobiology, planetary systems, stars: activity, stars: late-type, surveys, techniques: photometric, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2014",
+        month = "Oct",
+       volume = {148},
+       number = {4},
+          eid = {64},
+        pages = {64},
+          doi = {10.1088/0004-6256/148/4/64},
+archivePrefix = {arXiv},
+       eprint = {1407.1344},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014AJ....148...64S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
